大まかな感じ

--- a/home/MNU.html
+++ b/home/MNU.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>プロフィール</title>
+    <title>大まかな画面</title>
 </head>
 <body>
+<h2>ヘッダー：grenadinesyrup（画像付き）</h2>
     ここにプロフィールが書かれます。
 </body>
 </html>
