--- a/home/home.html
+++ b/home/home.html
@@ -6,7 +6,7 @@
     <title>大まかな画面</title>
 </head>
 <body>
-<h2>ヘッダー：grenadinesyrup（画像付き）</h2>
+<h2>ヘッダー：シャルノス・グレナデン（画像付き）</h2>
     ここにプロフィールが書かれます。
 </body>
 </html>
