--- a/home/home.html
+++ b/home/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大まかな画面</title>
+    <link rel="stylesheet" href="../../grenadine/css/home/home.css">
 </head>
 <body>
 <h2>ヘッダー：シャルノス・グレナデン（画像付き）</h2>
