画像がでない；；

--- a/home/home.html
+++ b/home/home.html
@@ -41,7 +41,7 @@
             <div class="video-frame">
             <iframe src="https://www.youtube.com/embed/fRmFISSYTAg" allowfullscreen></iframe>
             </div>
-            <a href="#" class="btn-red">YouTube</a>
+            <a href="https://www.youtube.com/@GrenadineSyrup_/videos" class="btn-red">YouTube</a>
             <div class="video-frame">
             <iframe src="https://www.youtube.com/embed/動画ID2" allowfullscreen></iframe>
             </div>
@@ -73,9 +73,9 @@
         <h2 class="section-title">Fan Art</h2>
         <div class="fanart-grid">
             <!-- 画像例 -->
-            <img src="images/fa1.jpg" alt="">
-            <img src="images/fa2.jpg" alt="">
-            <img src="images/fa3.jpg" alt="">
+            <!-- <img src="images/fa1.jpg" alt=""> -->
+            <!-- <img src="images/fa2.jpg" alt=""> -->
+            <!-- <img src="images/fa3.jpg" alt=""> -->
         </div>
     </section>
 </body>
