--- a/home/home.html
+++ b/home/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header class="header">
-        <h1 class="site-title">シャルノス・グレナデン</h1>
+        <div class="site-title title">シャルノス・グレナデン</div>
         <nav>
             <ul>
                 <li><a href="#profile">プロフィール</a></li>
@@ -23,10 +23,10 @@
     </header>
 
     <!-- ======= ホーム（背景ビジュアル） ======= -->
-    <section class="hero">
+    <!-- <section class="hero">
         <div class="overlay"></div>
         <h2 class="hero-title">Welcome to the Official Site</h2>
-    </section>
+    </section> -->
 
     <!-- ======= プロフィール ======= -->
     <section id="profile" class="section">
