画像を表に

--- a/home/home.html
+++ b/home/home.html
@@ -23,10 +23,9 @@
     </header>
 
     <!-- ======= ホーム（背景ビジュアル） ======= -->
-    <!-- <section class="hero">
+    <section class="hero">
         <div class="overlay"></div>
-        <h2 class="hero-title">Welcome to the Official Site</h2>
-    </section> -->
+    </section>
 
     <!-- ======= プロフィール ======= -->
     <section id="profile" class="section">
